update structure
