# docs/swagger.json
@@ -30,7 +30,7 @@
                         "in": "body",
                         "required": true,
                         "schema": {
-                            "$ref": "#/definitions/consolidated_feature_inwardfee_model.Request"
+                            "$ref": "#/definitions/model.Request"
                         }
                     }
                 ],
@@ -46,7 +46,7 @@
                                     "type": "object",
                                     "properties": {
                                         "responseDetail": {
-                                            "$ref": "#/definitions/consolidated_feature_inwardfee_model.Response"
+                                            "$ref": "#/definitions/Fee.Response"
                                         }
                                     }
                                 }
@@ -79,56 +79,7 @@
                         "in": "body",
                         "required": true,
                         "schema": {
-                            "$ref": "#/definitions/consolidated_domain_outward_model.Request"
-                        }
-                    }
-                ],
-                "responses": {
-                    "200": {
-                        "description": "OK",
-                        "schema": {
-                            "allOf": [
-                                {
-                                    "$ref": "#/definitions/Response"
-                                },
-                                {
-                                    "type": "object",
-                                    "properties": {
-                                        "responseDetail": {
-                                            "$ref": "#/definitions/consolidated_domain_outward_model.Response"
-                                        }
-                                    }
-                                }
-                            ]
-                        }
-                    }
-                }
-            }
-        },
-        "/fee/v1/promotioncode": {
-            "post": {
-                "security": [
-                    {
-                        "ApiKeyAuth": []
-                    }
-                ],
-                "consumes": [
-                    "application/json"
-                ],
-                "produces": [
-                    "application/json"
-                ],
-                "tags": [
-                    "Fee"
-                ],
-                "parameters": [
-                    {
-                        "description": "Request",
-                        "name": "model",
-                        "in": "body",
-                        "required": true,
-                        "schema": {
-                            "$ref": "#/definitions/consolidated_domain_fee_model.Request"
+                            "$ref": "#/definitions/model.Request"
                         }
                     }
                 ],
@@ -213,7 +164,7 @@
                 }
             }
         },
-        "consolidated_domain_fee_model.Request": {
+        "model.Request": {
             "type": "object",
             "properties": {
                 "refId": {
@@ -226,384 +177,6 @@
                     "type": "string"
                 },
                 "transTime": {
-                    "type": "string"
-                }
-            }
-        },
-        "consolidated_domain_inward_model.ReqDetail": {
-            "type": "object",
-            "properties": {
-                "accountNo": {
-                    "type": "string"
-                },
-                "amountFrom": {
-                    "type": "number"
-                },
-                "amountTo": {
-                    "type": "number"
-                },
-                "benCountry": {
-                    "type": "string"
-                },
-                "chargeType": {
-                    "type": "string"
-                },
-                "cifNo": {
-                    "type": "string"
-                },
-                "depositWithdraw": {
-                    "type": "string"
-                },
-                "effectiveDate": {
-                    "type": "string"
-                },
-                "exchangeRate": {
-                    "type": "number"
-                },
-                "feeChannel": {
-                    "type": "string"
-                },
-                "feeType": {
-                    "type": "string"
-                },
-                "fromCCY": {
-                    "type": "string"
-                },
-                "orderingType": {
-                    "type": "string"
-                },
-                "purpose": {
-                    "type": "string"
-                },
-                "searchPayInFull": {
-                    "type": "string"
-                },
-                "toCCY": {
-                    "type": "string"
-                },
-                "transactionType": {
-                    "type": "string"
-                }
-            }
-        },
-        "consolidated_domain_inward_model.Request": {
-            "type": "object",
-            "properties": {
-                "channelID": {
-                    "type": "string"
-                },
-                "refId": {
-                    "type": "string"
-                },
-                "reqDetail": {
-                    "$ref": "#/definitions/consolidated_domain_inward_model.ReqDetail"
-                },
-                "transDate": {
-                    "type": "string"
-                },
-                "transTime": {
-                    "type": "string"
-                }
-            }
-        },
-        "consolidated_domain_inward_model.Response": {
-            "type": "object",
-            "properties": {
-                "feeAmount": {
-                    "type": "number"
-                },
-                "feeCCY": {
-                    "type": "string"
-                },
-                "feeCategory": {
-                    "type": "string"
-                },
-                "feeRefID": {
-                    "type": "string"
-                },
-                "feeType": {
-                    "type": "string"
-                }
-            }
-        },
-        "consolidated_domain_outward_model.ReqDetail": {
-            "type": "object",
-            "properties": {
-                "accountNo": {
-                    "type": "string"
-                },
-                "amountFrom": {
-                    "type": "number"
-                },
-                "amountTo": {
-                    "type": "number"
-                },
-                "benCountry": {
-                    "type": "string"
-                },
-                "chargeType": {
-                    "type": "string"
-                },
-                "cifNo": {
-                    "type": "string"
-                },
-                "effectiveDate": {
-                    "type": "string"
-                },
-                "exchangeRate": {
-                    "type": "number"
-                },
-                "feeChannel": {
-                    "type": "string"
-                },
-                "feeType": {
-                    "type": "string"
-                },
-                "fromCCY": {
-                    "type": "string"
-                },
-                "orderingType": {
-                    "type": "string"
-                },
-                "purpose": {
-                    "type": "string"
-                },
-                "searchPayInFull": {
-                    "type": "string"
-                },
-                "toCCY": {
-                    "type": "string"
-                },
-                "transactionType": {
-                    "type": "string"
-                }
-            }
-        },
-        "consolidated_domain_outward_model.Request": {
-            "type": "object",
-            "properties": {
-                "channelID": {
-                    "type": "string"
-                },
-                "refId": {
-                    "type": "string"
-                },
-                "reqDetail": {
-                    "$ref": "#/definitions/consolidated_domain_outward_model.ReqDetail"
-                },
-                "transDate": {
-                    "type": "string"
-                },
-                "transTime": {
-                    "type": "string"
-                }
-            }
-        },
-        "consolidated_domain_outward_model.Response": {
-            "type": "object",
-            "properties": {
-                "feeAmount": {
-                    "type": "number"
-                },
-                "feeCCY": {
-                    "type": "string"
-                },
-                "feeCategory": {
-                    "type": "string"
-                },
-                "feeRefID": {
-                    "type": "string"
-                },
-                "feeType": {
-                    "type": "string"
-                }
-            }
-        },
-        "consolidated_feature_inwardfee_model.ReqDetail": {
-            "type": "object",
-            "properties": {
-                "accountNo": {
-                    "type": "string"
-                },
-                "amountFrom": {
-                    "type": "number"
-                },
-                "amountTo": {
-                    "type": "number"
-                },
-                "benCountry": {
-                    "type": "string"
-                },
-                "chargeType": {
-                    "type": "string"
-                },
-                "cifNo": {
-                    "type": "string"
-                },
-                "depositWithdraw": {
-                    "type": "string"
-                },
-                "effectiveDate": {
-                    "type": "string"
-                },
-                "exchangeRate": {
-                    "type": "number"
-                },
-                "feeChannel": {
-                    "type": "string"
-                },
-                "feeType": {
-                    "type": "string"
-                },
-                "fromCCY": {
-                    "type": "string"
-                },
-                "orderingType": {
-                    "type": "string"
-                },
-                "purpose": {
-                    "type": "string"
-                },
-                "searchPayInFull": {
-                    "type": "string"
-                },
-                "toCCY": {
-                    "type": "string"
-                },
-                "transactionType": {
-                    "type": "string"
-                }
-            }
-        },
-        "consolidated_feature_inwardfee_model.Request": {
-            "type": "object",
-            "properties": {
-                "channelID": {
-                    "type": "string"
-                },
-                "refId": {
-                    "type": "string"
-                },
-                "reqDetail": {
-                    "$ref": "#/definitions/consolidated_feature_inwardfee_model.ReqDetail"
-                },
-                "transDate": {
-                    "type": "string"
-                },
-                "transTime": {
-                    "type": "string"
-                }
-            }
-        },
-        "consolidated_feature_inwardfee_model.Response": {
-            "type": "object",
-            "properties": {
-                "feeAmount": {
-                    "type": "number"
-                },
-                "feeCCY": {
-                    "type": "string"
-                },
-                "feeCategory": {
-                    "type": "string"
-                },
-                "feeRefID": {
-                    "type": "string"
-                },
-                "feeType": {
-                    "type": "string"
-                }
-            }
-        },
-        "consolidated_feature_outwardfee_model.ReqDetail": {
-            "type": "object",
-            "properties": {
-                "accountNo": {
-                    "type": "string"
-                },
-                "amountFrom": {
-                    "type": "number"
-                },
-                "amountTo": {
-                    "type": "number"
-                },
-                "benCountry": {
-                    "type": "string"
-                },
-                "chargeType": {
-                    "type": "string"
-                },
-                "cifNo": {
-                    "type": "string"
-                },
-                "effectiveDate": {
-                    "type": "string"
-                },
-                "exchangeRate": {
-                    "type": "number"
-                },
-                "feeChannel": {
-                    "type": "string"
-                },
-                "feeType": {
-                    "type": "string"
-                },
-                "fromCCY": {
-                    "type": "string"
-                },
-                "orderingType": {
-                    "type": "string"
-                },
-                "purpose": {
-                    "type": "string"
-                },
-                "searchPayInFull": {
-                    "type": "string"
-                },
-                "toCCY": {
-                    "type": "string"
-                },
-                "transactionType": {
-                    "type": "string"
-                }
-            }
-        },
-        "consolidated_feature_outwardfee_model.Request": {
-            "type": "object",
-            "properties": {
-                "channelID": {
-                    "type": "string"
-                },
-                "refId": {
-                    "type": "string"
-                },
-                "reqDetail": {
-                    "$ref": "#/definitions/consolidated_feature_outwardfee_model.ReqDetail"
-                },
-                "transDate": {
-                    "type": "string"
-                },
-                "transTime": {
-                    "type": "string"
-                }
-            }
-        },
-        "consolidated_feature_outwardfee_model.Response": {
-            "type": "object",
-            "properties": {
-                "feeAmount": {
-                    "type": "number"
-                },
-                "feeCCY": {
-                    "type": "string"
-                },
-                "feeCategory": {
-                    "type": "string"
-                },
-                "feeRefID": {
-                    "type": "string"
-                },
-                "feeType": {
                     "type": "string"
                 }
             }
